# FIR_library

./: README.md
lib/: CMakeLists.txt
lib/examples/: CMakeLists.txt  example1.cpp  example3.cpp  example4.cpp  main.cpp
lib/garbage/: Bandpass.hpp  Highpass.hpp  Lowpass.hpp  fir_filters.hpp  windows.hpp
lib/include/: Bandpass.hpp  EasyDSP.hpp  FIR.hpp  FrequencySampling.hpp  Highpass.hpp  Lowpass.hpp  Window.hpp  WindowBandpass.hpp  WindowHighpass.hpp  WindowLowpass.hpp
lib/src/: Bandpass.cpp  FIR.cpp  FrequencySampling.cpp  Highpass.cpp  Lowpass.cpp  Window.cpp  WindowBandpass.cpp  WindowHighpass.cpp  WindowLowpass.cpp
